# swissknife

./: CMakeLists.txt  LICENSE  README.md
include/swissknife/: swissknife.hpp
